added Perfect Place section and made responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,9 +135,31 @@ main section{
 }
 
 
-
-
-
+/* perfect place section styles */
+.perfect-place{
+    display: grid;
+    grid-template-columns: 50% calc(50% - 5%);
+    grid-template-rows: auto;
+    gap: 5%;
+    align-items: center;
+}
+.perfectplace-details h2{
+    font-weight: bolder;
+    font-size: 2.5em;
+    margin: 0px;
+}
+.perfectplace-details p,button{
+    padding-top: 1%;
+}
+.perfectplace-details ul li{
+    padding-top:1%;
+}
+.perfectplace-media video{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 
 
@@ -208,7 +230,7 @@ main section{
     /* main section styles */
     main section{
         width: 90%;
-        margin: 5% auto;
+        margin: 15% auto;
     }
     
     /* popular tour section styles */
@@ -225,5 +247,12 @@ main section{
         height: 100%;
         position: relative;
         left: 0%;
+    }
+    /* perfect place section styles */
+    .perfect-place{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .perfectplace-details h2{
+        font-size: 1.5em;
     }
 }
